change to proper closing

--- a/public/chat.html
+++ b/public/chat.html
@@ -39,7 +39,7 @@
                        
                     </p>
                    <p>{{message}}</p>
-              <div/>
+              </div>
           </script>
 
           <script id='location-template' type='text/html'>
@@ -51,7 +51,7 @@
                  </p>
 
                     <p><a href="{{locationURL}}" target='_blank'> My Location </a></p>
-              <div/>
+              </div>
           </script>
 
           <script id='sidebar-template' type ='text/html'>
