UI improved for the landing page #12

--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/images/favicon.png">
-    <link rel="stylesheet" href="styles/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/images/favicon.png" />
+    <link rel="stylesheet" href="styles/landingPageStyles.css" />
     <title>My Chat App</title>
-</head>
-<body>
-
-        <div class="centered-form">
-            <div class="centered-form__box">
-                <h1>Join</h1>
-                <form action="/chat.html">
-                    <label for="">Display Name</label>
-                    <input type="text" name='username' placeholder="Display Name" required>
-                    <label for="">Room</label>
-                    <input type="text" name='room' placeholder="Room" required>
-                    <button>Join</button>
-                </form>
-            </div>
-        </div>
-    
-</body>
+  </head>
+  <body>
+    <div class="centered-form">
+      <div class="centered-form__box">
+        <h1>
+          <center><div class="border-bottom-2">Join</div></center>
+        </h1>
+        <center>
+          <form action="/chat.html">
+            <label for="">Display Name</label>
+            <input
+              type="text"
+              name="username"
+              placeholder="Display Name"
+              required
+            />
+            <label for="">Room</label>
+            <input type="text" name="room" placeholder="Room" required />
+            <button>Join</button>
+            <div class="border-bottom"></div>
+          </form>
+        </center>
+      </div>
+    </div>
+  </body>
 </html>
