--- a/public/chat.html
+++ b/public/chat.html
@@ -25,6 +25,8 @@
           <input placeholder="Type a message" id='message' type="text" required autocomplete="off">
           <button id='submitBtn'><i class="fas fa-paper-plane"></i></button>
         </form>
+        <button id="imgbutton"/>Image</button>
+        <input hidden id="sendImage" accept="image/x-png,image/gif,image/jpeg" type="file" value="image"/>
         <button id='location'>Send Location</button>
       </div>
 
@@ -57,6 +59,18 @@
     </div>
   </script>
 
+  <script id='image-template' type='text/html'>
+    <div class='message'>
+      <p>
+        <span class='message__name'>{{username}}</span>
+        <span class='message__meta'>{{createdAt}}</span>
+
+      </p>
+
+      <p><a href="{{imageURL}}"target="_blank"><img src="{{imageURL}}" width="300" height="300" /></a></p>
+    </div>
+  </script>
+
   <script id='sidebar-template' type='text/html'>
     <h2 class="room-title">{{room}}</h2>
     <h3 class='list-title'>Users</h3>
@@ -78,4 +92,3 @@
 </body>
 
 </html>
-
